# minstrel-bot

./: Cargo.toml
src/: bot.rs  main.rs  passthrough.rs  server.rs
src/commands/: defs.rs  run.rs
