[package]
name = "minstrel-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = "0.14.26"
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal", "sync"]}
songbird = { version = "0.3.2", features = ["builtin-queue"] }

[dependencies.serenity]
version = "0.11.6" 
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "voice"]
