[package]
name = "minstrel-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = "1.1.0"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal", "sync"]}
songbird = { version = "0.4.0", features = ["builtin-queue"] }
lazy_static = "1.4.0"

[dependencies.serenity]
version = "0.12.0" 
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "voice"]
